# informatica-avanzada

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.ui  mostrarprueba.h
.github/workflows/: codeql.yml  main.yml
includes/: addinfo.h  crearprueba.h  getinfo.h  mostrarprueba.h  pruebadiagnostica.h  regvacunas.h  usuarios.h  vacuna.h
includes/database/: database.hpp
includes/pruebas/: crearprueba.h  mostrarprueba.h  pruebadiagnostica.h
includes/usuarios/: buscarcrearusuario.h  usuarios.h  ventanadatosusuario.h
includes/vacunas/: addinfo.h  getinfo.h  regvacunas.h  vacuna.h
includes/windows/: equipotecnicowindow.h  mainwindow.h
src/: addinfo.cpp  addinfo.ui  crearprueba.cpp  getinfo.cpp  getinfo.ui  main.cpp  mostrarprueba.cpp  mostrarprueba.ui  pruebadiagnostica.cpp  regvacunas.cpp  regvacunas.ui  usuarios.cpp  vacuna.cpp
src/pruebas/: crearprueba.cpp  crearprueba.ui  mostrarprueba.cpp  pruebadiagnostica.cpp
src/usuarios/: buscarcrearusuario.cpp  buscarcrearusuario.ui  usuarios.cpp  ventanadatosusuario.cpp  ventanadatosusuario.ui
src/vacunas/: addinfo.cpp  addinfo.ui  getinfo.cpp  getinfo.ui  regvacunas.cpp  regvacunas.ui  vacuna.cpp
src/windows/: equipotecnicowindow.cpp  equipotecnicowindow.ui  mainwindow.cpp  mainwindow.ui
